--- a/interviews.html
+++ b/interviews.html
@@ -1,53 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Interviews</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
     <header>
-        <a href = "">Skip to Main Content</a>
+        <a href="">Skip to Main Content</a>
         <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
         <nav>
             <ul>
-                <li><a href = "index.html">Home</a></li>
-                <li><a href = "resume.html">Resumes</a></li>
-                <li><a href = "networking&connections.html">Networking & Connections</a></li>
-                <li><a href = "interviews.html">Interviews</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="resume.html">Resumes</a></li>
+                <li><a href="networking&connections.html">Networking & Connections</a></li>
+                <li><a href="interviews.html">Interviews</a></li>
             </ul>
         </nav>
-    
-    <h1>Prepare for Your Interview</h1>
+
+        <h1>Prepare for Your Interview</h1>
     </header>
-<main>
-    <section>
-    <p>
-        The University of Michigan School of Information (UMSI) Career Development Office is dedicated to supporting students as they pursue their professional goals. This section provides comprehensive resources to help you build confidence and succeed in every step of the interview process. Whether you are seeking an internship, your first full-time role, or a career pivot, we are here to guide you through effective interview preparation.
-    </p>
+    <main>
+        <section>
+            <p>
+                The University of Michigan School of Information (UMSI) Career Development Office is dedicated to
+                supporting students as they pursue their professional goals. This section provides comprehensive
+                resources to help you build confidence and succeed in every step of the interview process. Whether you
+                are seeking an internship, your first full-time role, or a career pivot, we are here to guide you
+                through effective interview preparation.
+            </p>
 
-    <p>
-         On this page, you'll find step-by-step guidance on: Understanding different interview formats and what to expect,Researching companies and roles to prepare for targeted questions,Practicing answers for commonly asked questions,Following up after your interview,Learning how to negotiate job offers and next steps
-    </p>
-      
-    <p>
-      Need feedback? You can always <a href="https://umsi.instructure.com/courses/12345/pages/meet-with-a-career-coach" target="_blank">meet with a CDO Career Coach</a> to review your materials.
-    </p>
-    </section>
+            <p>
+                On this page, you'll find step-by-step guidance on: Understanding different interview formats and what
+                to expect,Researching companies and roles to prepare for targeted questions,Practicing answers for
+                commonly asked questions,Following up after your interview,Learning how to negotiate job offers and next
+                steps
+            </p>
 
-    <section>
-    <h2>Understanding different interviews</h2>
-    <ol>
-      <li><strong>Download a UMSI-Approved Template:</strong> Start with a format that works—no need to design from scratch.</li>
-      <li><strong>Gather Your Experiences:</strong> List jobs, internships, volunteer roles, coursework, and projects most relevant to your goals.</li>
-      <li><strong>Write Impactful Bullets:</strong> Use action verbs and highlight your skills, results, and unique contributions.</li>
-      <li><strong>Tailor for Each Opportunity:</strong> Customize your resume for every job or internship you pursue.</li>
-      <li><strong>Review and Edit:</strong> Proofread for errors, check formatting, and ask for feedback from peers or a career coach.</li>
-    </ol>
-  </section>
+            <p>
+                Need feedback? You can always <a
+                    href="https://umsi.instructure.com/courses/12345/pages/meet-with-a-career-coach"
+                    target="_blank">meet with a CDO Career Coach</a> to review your materials.
+            </p>
+        </section>
 
-  <!-- Content taken & modified from UMGPT with the prompt, "Write me a webpage of intro content to help meet the following requirements - this is for the interview page": and then pasted in the client objectives & project requirements." UMGPT. (2025). UMGPT (GPT-4.1, September 4th version) [Large language model].  -->
-</main>
+        <section>
+            <h2>Interview Success: Steps to Shine</h2>
+            <ol>
+                <li><strong>Understand the Interview Format:</strong> Find out if your interview is virtual, in-person,
+                    or a panel, and learn what to expect.</li>
+                <li><strong>Research the Employer:</strong> Study the organization’s mission, values, and recent
+                    projects so you can tailor your answers.</li>
+                <li><strong>Prepare Your Responses:</strong> Review common interview questions and practice your
+                    answers, highlighting your strengths and relevant experience.</li>
+                <li><strong>Plan Your Questions:</strong> Prepare thoughtful questions to ask the interviewer about the
+                    team, company culture, or role responsibilities.</li>
+                <li><strong>Dress and Set Up:</strong> Choose professional attire, organize your interview space, and
+                    check your technology if interviewing remotely.</li>
+                <li><strong>Follow Up with Gratitude:</strong> Send a prompt thank-you message expressing your
+                    appreciation and reinforcing your interest in the opportunity.</li>
+            </ol>
+        </section>
+
+        <section>
+            <h2>Planning your job/Internship Search</h2>
+            <ul>
+                <li>
+                    <a href=" https://docs.google.com/spreadsheets/d/1fT4YeP1M5moXtFYniTkyb-CCLV7PZ75B9iJFH-XWMv4/edit?gid=1589706144#gid=1589706144"
+                        target="_blank">
+                        Job Search Plan & Application Tracker
+                    </a> <br>
+                    Resources for Job search
+                </li>
+                <li>
+                    <a href="https://docs.google.com/document/d/1PXcEpUmqIx0wdJbSFPSGQDrWMRyZEe_YFoQHtKZDko4/edit?tab=t.0#heading=h.gjdgxs" target="_blank">
+                        Critical Career Factors Inventory
+                    </a> <br>
+                    <strong>What's important to you in a job?</strong>
+                </li>
+                <li>
+                    <a href="https://docs.google.com/document/d/1_Mh2N-azjpH-WAf0Z6T51D6ag5ciYw4HpNwc0T6j_rM/edit?tab=t.0" target="_blank">
+                        Job and Internship Search Strategic Plan
+                    </a> <br>
+                    A strategic career plan helps to focus your goals and produce results and outcomes that relate to your individual goals. This process begins with personal reflection and includes intentional action plans.
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Interview Preparation</h2>
+            <img src="images/Interview2.jpg" alt="A girl holding her resume">
+            <ul>
+                <li>
+                    <a href="https://docs.google.com/document/d/1lqMTo5GGCa-0dabg2LZiW2YWasirj05ymFLrQhkcQ7c/edit?tab=t.0#"
+                        target="_blank">
+                        Pre-Interview Worksheet
+                    </a> <br>
+                    Getting started.
+                </li>
+                <li>
+                    <a href="https://docs.google.com/document/d/1C-rxX5VcjVH7YjMdHil1VMo9ZdSOHmausOcX61dld-g/edit?tab=t.0#heading=h.kck2nwabknyi"
+                        target="_blank">
+                        AI guide
+                    </a> <br>
+                    Strong interview prep is key to making a great impression. AI can help by analyzing job
+                    descriptions, summarizing company insights, and generating mock interview questions. It can refine
+                    behavioral responses using the STAR method and provide technical challenges for coding or case study
+                    practice.
+                </li>
+                <li>
+                    <a href="https://docs.google.com/presentation/d/1zKegYumYvZG0y5vAWU91py8K_cHfAG3f22DUA2e_H9c/edit?slide=id.g4f2f3da28a_2_0#slide=id.g4f2f3da28a_2_0"
+                        target="_blank">
+                        How to talk Course projects in interview
+                    </a> <br>
+                    Adding your course project to your resume, and write your STAR story.
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Technical, Design, & Case Interviews</h2>
+            <img src="images/Interview1.jpg" alt="People Attending events">
+            <ul>
+                <li>
+                    <a href="https://docs.google.com/document/d/1qys4-VL7LVX-8HG-uPVUV0w_G5uKsyQ_cK7ZDsxle4s/edit?tab=t.0"
+                        target="_blank">
+                        Preparing for Technical Interviews
+                    </a> <br>
+                    Technical inverview questions samples
+                </li>
+                <li>
+                    <a href="https://blog.uxfol.io/ux-portfolio-presentation/" target="_blank">
+                        How to Present your UX Portfolio in an interview
+                    </a> <br>
+                    How to Structure and Present Your UX Portfolio on a Job Interview.
+                </li>
+            </ul>
+        </section>
+
+         <section>
+            <h2>Negotiation Strategies</h2>
+            <ul>
+                <li>
+                    <a href="https://docs.google.com/document/d/1pyL592PwhfCCAW2b4HO4KW320hamvHabmaP-2NvZqdE/edit?tab=t.0"
+                        target="_blank">
+                       How to draft a Salary Negotiation response
+                    </a> 
+                </li>
+                <li>
+                    <a href="https://docs.google.com/document/d/1C-rxX5VcjVH7YjMdHil1VMo9ZdSOHmausOcX61dld-g/edit?tab=t.0#heading=h.zbvnflngxekd" target="_blank">
+                        AI prompt guide
+                    </a> <br>
+                    How to use AI for you to negotiate your Salary?
+                </li>
+            </ul>
+        </section>
+        <!-- Content taken & modified from UMGPT with the prompt, "Write me a webpage of intro content to help meet the following requirements - this is for the interview page": and then pasted in the client objectives & project requirements. Also asked "write me a pragraph just like resume page for interview success." UMGPT. (2025). UMGPT (GPT-4.1, September 4th version) [Large language model].  -->
+    </main>
+
+    <footer>
+        <p>University of Michigan School of Information | <a href="https://umich.instructure.com/courses/137916">UMSI
+                Career
+                Development Office </a></p>
+    </footer>
 
 </body>
+
 </html>
