--- a/interviews.html
+++ b/interviews.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="resume.html">Resumes</a></li>
-                <li><a href="networking&connections.html">Networking & Connections</a></li>
+                <li><a href="networking.html">Networking & Connections</a></li>
                 <li><a href="interviews.html">Interviews</a></li>
             </ul>
         </nav>
